fix: align metrics exporter naming (#3424)
## Summary
- Align shared Prometheus name normalization with Prometheus pull rules.
- Keep `objects_search_count` pseudo-histogram names stable by removing
the inappropriate `count` unit.
- Keep the focused rule regression test in `automq-metrics`.